--- a/references.bib
+++ b/references.bib
@@ -22,13 +22,105 @@
 }
 
 @Misc{cassylab2,
-  author    = {{LD DIDACTIC GmbH}},
+  author    = {{LD Didactic GmbH}},
   note      = {Version 2.24.10378},
   title     = {{Cassy} {Lab} 2},
   year      = {2010--2021},
   owner     = {LD DIDACTIC GmbH},
   timestamp = {2021},
   url       = {https://www.ld-didactic.de/en/products-solutions/data-logging-and-measuring-technology/cassy-software.html},
+}
+
+@Manual{xRayManual,
+  title        = {Instruction sheet 559 938},
+  author       = {{LD Didactic GmbH}},
+  organization = {LD Didactic GmbH},
+  year         = {2005},
+  url          = {https://www.ld-didactic.de/documents/en-US/GA/GA/5/559/559938e.pdf?_ga=2.102154309.530245957.1650838453-1808266661.1650206614},
+}
+
+@Misc{RoyalMint,
+  author   = {{The Royal Mint}},
+  title    = {Coin Designs and Specifications (online article)},
+  abstract = {Discover the art and craft of coin design through the coins in circulation today. Learn what makes a coin legal tender and the process that each design goes through before receiving Royal Proclamation.},
+  url      = {https://www.royalmint.com/discover/uk-coins/coin-design-and-specifications/},
+}
+
+@Misc{SingaporeOld,
+  author = {{Board of Commissioners of Currency}},
+  month  = mar,
+  title  = {Currency Notes and Coins (Consolidation) Notification},
+  year   = {1992},
+  url    = {https://sso.agc.gov.sg/SL/69-N1?DocDate=19920325&ProvIds=Sc-&Timeline=On#Sc-},
+}
+
+@Misc{SingaporeNew,
+  author = {{Board of Commissioners of Currency}},
+  month  = dec,
+  title  = {Currency (Denominations and Characteristics of Coins) (No. 3) Notification 2015},
+  year   = {2015},
+  url    = {https://sso.agc.gov.sg/SL/CA1967-S780-2015?DocDate=20151223&ProvIds=Sc-#Sc-},
+}
+
+@Article{2014EUCoins,
+  journal = {Official Journal of the European Union},
+  title   = {Council Regulation (EU) No 729/2014 of 24 June 2014 on denominations and technical specifications of euro coins intended for circulation (Recast)},
+  year    = {2014},
+  issn    = {ISSN 1977-0677},
+  month   = jun,
+  pages   = {1--7},
+  volume  = {L 194},
+  url     = {https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=OJ:L:2014:194:TOC},
+}
+
+@Misc{SwedenKrona,
+  author = {{Sveriges Riksbank}},
+  title  = {Invalid 1-krona coin},
+  year   = {2017},
+  url    = {https://www.riksbank.se/en-gb/payments--cash/notes--coins/coins/invalid-coins/invalid-1-krona-coin/},
+}
+
+@Misc{1997NorwayKrone,
+  author = {{Norges Bank}},
+  month  = sep,
+  title  = {1-krone coin - Design and technical specifications},
+  year   = {1997},
+  url    = {https://www.norges-bank.no/en/topics/notes-and-coins/legal-tender-notes-coins/1-krone-coin/1-design/},
+}
+
+@Misc{SwissCentime,
+  author = {Wikipedia},
+  title  = {Coins of the Swiss franc},
+  url    = {https://en.wikipedia.org/wiki/Coins_of_the_Swiss_franc},
+}
+
+@Misc{JapanYen,
+  author = {Japan Mint},
+  title  = {Coins Presently Minted},
+  url    = {https://www.mint.go.jp/eng/operations-eng/production-eng/production-aproach-eng/eng_operations_coin_index.html},
+}
+
+@Misc{HongKongCent,
+  author = {Hong Kong Monetary Authority},
+  title  = {Coins in Circulation},
+  url    = {https://www.hkma.gov.hk/eng/key-functions/money/hong-kong-currency/coins/},
+}
+
+@Misc{USACoins,
+  author = {United States Mint},
+  title  = {Coin Specifications},
+  year   = {2019},
+  url    = {https://www.usmint.gov/learn/coin-and-medal-programs/coin-specifications},
+}
+
+@Misc{Hudson2003,
+  author    = {Hudson, Lawrence},
+  title     = {X-ray Transition Energies, NIST Standard Reference Database 128},
+  year      = {2003},
+  copyright = {License Information for NIST data},
+  doi       = {10.18434/T4859Z},
+  language  = {en},
+  publisher = {National Institute of Standards and Technology},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
