--- a/references.bib
+++ b/references.bib
@@ -123,4 +123,17 @@
   publisher = {National Institute of Standards and Technology},
 }
 
+@Article{Krause1979,
+  author    = {M. O. Krause and J. H. Oliver},
+  journal   = {Journal of Physical and Chemical Reference Data},
+  title     = {Natural widths of atomic {$K$} and {$L$} levels, {$K_\alpha$} X-ray lines and several {$KLL$} Auger lines},
+  year      = {1979},
+  month     = {apr},
+  number    = {2},
+  pages     = {329--338},
+  volume    = {8},
+  doi       = {10.1063/1.555595},
+  publisher = {{AIP} Publishing},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
