Added reference for canadian coin composition.

--- a/references.bib
+++ b/references.bib
@@ -136,4 +136,10 @@
   publisher = {{AIP} Publishing},
 }
 
-@Comment{jabref-meta: databaseType:bibtex;}
+@WWW{CanadaCoin,
+  author = {{Royal Canadian Mint}},
+  title  = {A familiar face – the 25-cent coin},
+  url    = {https://www.mint.ca/store/mint/learn/25-cents-5300010},
+}
+
+@Comment{jabref-meta: databaseType:biblatex;}
