Final changes before hand-in.

--- a/references.bib
+++ b/references.bib
@@ -142,4 +142,40 @@
   url    = {https://www.mint.ca/store/mint/learn/25-cents-5300010},
 }
 
+@Article{Vriesekoop2016,
+  author       = {Frank Vriesekoop and Jing Chen and Jenna Oldaker and Flavien Besnard and Reece Smith and William Leversha and Cheralee Smith-Arnold and Julie Worrall and Emily Rufray and Qipeng Yuan and Hao Liang and Amalia Scannell and Cryn Russell},
+  date         = {2016-11},
+  journaltitle = {Microorganisms},
+  title        = {Dirty Money: A Matter of Bacterial Survival, Adherence, and Toxicity},
+  doi          = {10.3390/microorganisms4040042},
+  number       = {4},
+  pages        = {42},
+  volume       = {4},
+  publisher    = {{MDPI} {AG}},
+}
+
+@Article{Hamann2012,
+  author       = {Carsten R. Hamann and Dathan Hamann and Curtis Hamann and Jacob P. Thyssen and Carola Lid{\'{e}}n},
+  date         = {2012-12},
+  journaltitle = {Contact Dermatitis},
+  title        = {The cost of nickel allergy: a global investigation of coin composition and nickel and cobalt release},
+  doi          = {10.1111/cod.12008},
+  number       = {1},
+  pages        = {15--22},
+  volume       = {68},
+  publisher    = {Wiley},
+}
+
+@Article{Julander2013,
+  author       = {Anneli Julander and Klara Midander and Gunilla Herting and Jacob P. Thyssen and Ian R. White and Inger Odnevall Wallinder and Carola Lid{\'{e}}n},
+  date         = {2013-05},
+  journaltitle = {Contact Dermatitis},
+  title        = {New {UK} nickel-plated steel coins constitute an increased allergy and eczema risk},
+  doi          = {10.1111/cod.12092},
+  number       = {6},
+  pages        = {323--330},
+  volume       = {68},
+  publisher    = {Wiley},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
